# behapy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
behapy/: __init__.py  _version.py
behapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
behapy/_core/: _behapydata.py
behapy/datasets/: _synthetic.py
behapy/io/: _dlc.py  _sleap.py  _writers.py
behapy/neighbors/: __init__.py
behapy/plotting/: __init__.py  _behavior.py  _external.py  _features.py  _trajectory.py
behapy/preprocessing/: _features.py  _features_2d.py  _filter.py  _neighbors.py  _normalize.py
behapy/tools/: __init__.py  _embedding.py  _markers.py  _temporal.py
docs/: PROJECT_SUMMARY.md  pyrat_dataset_info.md  validation.md
examples/: statistical_testing.ipynb
roadmap/: behapy_summary.md  behapy_tree.md  reference_summary.md  steps.md
scripts/: pyrat_info.py  setup_pyrat_test_data.py  test_all_pyrat_files.py  test_features.py  test_neighbors_speed.py  test_plot_performance.py  test_pyrat_pipeline.py
skills/configure-mirrors/: SKILL.md
skills/gitee-push/: SKILL.md
tests/: test_cluster_merging.py  test_core.py  test_extended.py  test_external_vis.py  test_phase6_11.py  test_preprocessing.py  test_pyrat_load.py  test_statistics.py  test_temporal_analysis.py  test_tools.py
